feat: implement client api v1
Co-authored-by: Leon Linhart <themrmilchmann@gmail.com>