@@ -9,33 +9,33 @@ import java.util.stream.Stream;
 
 public enum Gw2ApiPermission {
 
-    ACCOUNT("account", 0),
-    BUILDS("builds", 1),
-    CHARACTERS("characters", 2),
-    GUILDS("guilds", 3),
-    INVENTORIES("inventories", 4),
-    PROGRESSION("progression", 5),
-    PVP("pvp", 6),
-    TRADINGPOST("tradingpost", 7),
-    UNLOCKS("unlocks", 8),
-    WALLET("wallet", 9);
+    ACCOUNT("account", 0, OAuth2Scope.GW2_ACCOUNT),
+    BUILDS("builds", 1, OAuth2Scope.GW2_BUILDS),
+    CHARACTERS("characters", 2, OAuth2Scope.GW2_CHARACTERS),
+    GUILDS("guilds", 3, OAuth2Scope.GW2_GUILDS),
+    INVENTORIES("inventories", 4, OAuth2Scope.GW2_INVENTORIES),
+    PROGRESSION("progression", 5, OAuth2Scope.GW2_PROGRESSION),
+    PVP("pvp", 6, OAuth2Scope.GW2_PVP),
+    TRADINGPOST("tradingpost", 7, OAuth2Scope.GW2_TRADINGPOST),
+    UNLOCKS("unlocks", 8, OAuth2Scope.GW2_UNLOCKS),
+    WALLET("wallet", 9, OAuth2Scope.GW2_WALLET);
 
-    private static final List<Gw2ApiPermission> VALUES = List.of(values());
-    private static final Set<Gw2ApiPermission> ALL = Set.copyOf(EnumSet.allOf(Gw2ApiPermission.class));
+    private static final Set<Gw2ApiPermission> ALL = Collections.unmodifiableSet(EnumSet.allOf(Gw2ApiPermission.class));
     private static final Map<String, Gw2ApiPermission> BY_GW2;
-    private static final Map<String, Gw2ApiPermission> BY_OAUTH2;
+    private static final Map<OAuth2Scope, Gw2ApiPermission> BY_SCOPE;
     static {
-        final Map<String, Gw2ApiPermission> byGw2 = new HashMap<>(VALUES.size());
-        final Map<String, Gw2ApiPermission> byOauth2 = new HashMap<>(VALUES.size());
+        final Gw2ApiPermission[] values = values();
+        final Map<String, Gw2ApiPermission> byGw2 = new HashMap<>(values.length);
+        final Map<OAuth2Scope, Gw2ApiPermission> byScope = new EnumMap<>(OAuth2Scope.class);
         int flagAll = 0;
 
-        for (Gw2ApiPermission gw2ApiPermission : VALUES) {
+        for (Gw2ApiPermission gw2ApiPermission : values) {
             if (byGw2.put(gw2ApiPermission.gw2(), gw2ApiPermission) != null) {
                 throw new IllegalStateException("invalid configuration: gw2 value " + gw2ApiPermission.gw2() + " already present");
             }
 
-            if (byOauth2.put(gw2ApiPermission.oauth2(), gw2ApiPermission) != null) {
-                throw new IllegalStateException("invalid configuration: oauth2 value " + gw2ApiPermission.oauth2() + " already present");
+            if (byScope.put(gw2ApiPermission.scope(), gw2ApiPermission) != null) {
+                throw new IllegalStateException("invalid configuration: oauth2 value " + gw2ApiPermission.scope() + " already present");
             }
 
             if ((flagAll & gw2ApiPermission.flag) == 0) {
@@ -46,15 +46,17 @@ public enum Gw2ApiPermission {
         }
 
         BY_GW2 = Map.copyOf(byGw2);
-        BY_OAUTH2 = Map.copyOf(byOauth2);
+        BY_SCOPE = Collections.unmodifiableMap(byScope);
     }
 
     private final String value;
     private final int flag;
+    private final OAuth2Scope scope;
 
-    Gw2ApiPermission(String value, int nthBitFlag) {
+    Gw2ApiPermission(String value, int nthBitFlag, OAuth2Scope scope) {
         this.value = value;
         this.flag = 1 << nthBitFlag;
+        this.scope = scope;
     }
 
     @JsonValue
@@ -62,22 +64,22 @@ public enum Gw2ApiPermission {
         return this.value;
     }
 
-    public String oauth2() {
-        return "gw2:" + this.value;
-    }
-
-    public static Optional<Gw2ApiPermission> fromOAuth2(String oauth2) {
-        return Optional.ofNullable(BY_OAUTH2.get(oauth2));
+    public OAuth2Scope scope() {
+        return this.scope;
     }
 
     public static Optional<Gw2ApiPermission> fromGw2(String gw2) {
         return Optional.ofNullable(BY_GW2.get(gw2));
     }
 
+    public static Optional<Gw2ApiPermission> fromScope(OAuth2Scope scope) {
+        return Optional.ofNullable(BY_SCOPE.get(scope));
+    }
+
     public static Set<Gw2ApiPermission> fromBitSet(int bitSet) {
         return stream()
                 .filter((gw2ApiPermission) -> (bitSet & gw2ApiPermission.flag) == gw2ApiPermission.flag)
-                .collect(Collectors.toSet());
+                .collect(Collectors.toUnmodifiableSet());
     }
 
     public static int toBitSet(Collection<Gw2ApiPermission> gw2ApiPermissions) {
@@ -90,12 +92,8 @@ public enum Gw2ApiPermission {
         return bitSet;
     }
 
-    public static boolean contains(Gw2ApiPermission gw2ApiPermission) {
-        return ALL.contains(gw2ApiPermission);
-    }
-
     public static Stream<Gw2ApiPermission> stream() {
-        return VALUES.stream();
+        return ALL.stream();
     }
 
     public static Set<Gw2ApiPermission> all() {
